fixing actions alignment

--- a/client/src/style/TaskItem.scss
+++ b/client/src/style/TaskItem.scss
@@ -24,6 +24,10 @@
 		font-weight: bold;
 	}
 
+  .actions {
+    min-width: 80px;
+  }
+
   .icon-btn {
     width: 20px;
     height: 20px;
